# azdo-test-evidence-publisher

./: .gitignore  README.md  pyproject.toml
azdo_test_publisher/: __init__.py  cli.py  config.py  mapping.py  models.py
azdo_test_publisher/azdo/: __init__.py  client.py  publisher.py
azdo_test_publisher/evidence/: __init__.py  collector.py  patterns.py
azdo_test_publisher/parsers/: __init__.py  base.py  junit.py  nunit.py  robot.py  trx.py
azdo_test_publisher/utils/: files.py  logging.py
docs/: rbt-lite-positioning.md
examples/: dotnet.publisher.json  dotnet.publisher.yml  jmeter.publisher.json  jmeter.publisher.yml  junit.publisher.json  playwright.publisher.json  playwright.publisher.yml  publisher.json  publisher.yml  robot.publisher.json  robot.publisher.yml
templates/azure-pipelines/: azdo-test-evidence-publisher.yml
tests/fixtures/junit/: results.xml
tests/fixtures/nunit/: results.xml
tests/fixtures/robot/: output.xml
tests/fixtures/trx/: results.trx
tests/unit/: test_config.py  test_evidence.py  test_mapping.py  test_parsers.py  test_publisher_mapping.py  test_validation.py
