[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azdo-test-evidence-publisher"
version = "0.1.0"
description = "Framework-agnostic Azure DevOps Test Evidence Publisher"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Vincent Vonk" }]
dependencies = [
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
  "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
yaml = ["pyyaml>=6.0.1"]

[project.scripts]
azdo-test-evidence-publisher = "azdo_test_publisher.cli:main"

[tool.setuptools.packages.find]
include = ["azdo_test_publisher*"]
exclude = ["tests*", "examples*", "templates*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
